objects/amazonconnect__AC_VoicemailDrop__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactId__c</fullName>
        <label>ContactId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Language__c</fullName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amazonconnect__AC_VoicemailDropLanguage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Voice__c</fullName>
        <label>Voice</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>amazonconnect__Language__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>amazonconnect__AC_VoicemailDropVoice</valueSetName>
        </valueSet>
    </fields>
    <label>AC Voicemail Drop</label>
    <listViews>
        <fullName>amazonconnect__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AC Voicemail Drop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Voicemail Drops</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>